# pos10

./: .gitignore  LICENSE  package-lock.json  package.json
src/: App.css  App.jsx  (+2 more)
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/db2/Products/: 000069.sst  000078.sst  000087.sst  000098.sst  000109.sst  000118.sst  000127.sst  000136.sst  000147.sst  000156.sst  001597.sst  IDENTITY  LOG.old.1725808238326642  LOG.old.1725808245172938  LOG.old.1725808254304873  LOG.old.1725808685643206  LOG.old.1725808686576692  LOG.old.1725808697506404  LOG.old.1725821582319567  LOG.old.1725821582488723  LOG.old.1725823008945049  LOG.old.1725823009113465  LOG.old.1725823530386838  LOG.old.1725823530546319  LOG.old.1725823671487295  LOG.old.1725823671690396  LOG.old.1725823702694355  LOG.old.1725823703325716  LOG.old.1725823709422316  LOG.old.1725823709944940  LOG.old.1725823719799669  LOG.old.1725823720320905  LOG.old.1725823725918699  LOG.old.1725823726890668  LOG.old.1725823734778318  LOG.old.1725823735350433  LOG.old.1725823741312833  LOG.old.1725823741885579  LOG.old.1725823747672990  LOG.old.1725823748412680  (+377 more)
src-tauri/db2/Users/: 000020.sst  IDENTITY  LOG.old.1724264135587263  LOG.old.1724264372703530  LOG.old.1724265502446631  LOG.old.1724265503453740  LOG.old.1724265759362550  LOG.old.1724349046499757  LOG.old.1724349145391376  LOG.old.1724349273853098  LOG.old.1724350266928396  LOG.old.1724350301865309  LOG.old.1724350335155555  LOG.old.1724350419009051  LOG.old.1724350439238207  LOG.old.1724350593601082  (+108 more)
src-tauri/src/: config.rs  context.rs  lib.rs  main.rs
(+60 files in other folders)
