[package]
name = "pos10"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pos10_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocksdb = "0.22.0"
sha2 = "0.10.8"
base64ct = { version = "1.6.0", features = ["alloc"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
tauri-plugin-fs = "2.0.0-rc.5"

